fix: font size on mobile

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,8 +1,8 @@
 $primary-font: 'Fira Sans', sans-serif;
-$large-font-size: 1.6em;
-$normal-font-size: 1.3em;
-$small-font-size: 1em;
-$tiny-font-size: 0.8em;
+$large-font-size: 1.45em;
+$normal-font-size: 1.15em;
+$small-font-size: 0.85em;
+$tiny-font-size: 0.65em;
 $text-color: #444;
 
 html,
